apps/hiddenite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: hiddenite
spec:
  type: NodePort
  
  selector:
    app: production
    
  ports:
  - name: http
    port: 4433 # HIDD
    targetPort: 8080
    nodePort: 30008
    protocol: TCP
